# EyeBox

./: EyeBall-15mm.3mf  EyeBall-15mm.stl  EyeBall.stl  EyeBalls-x6.3mf  EyeBar (x2).stl  EyeBar.stl  EyeBox.3mf  EyeInner.stl  EyePin.stl  EyePivot-v2.stl  EyePivot.stl  EyeShell.stl  README.md
eye-wall/: .codeiumignore  .gitignore  center-sights.py  consts.py  depth-check.py  direction-test-slow.py  eye-sights.py  focus-eyes.py  i2c-timing-test.py  left-right-test.py  notes.md  photo_capture.py  photo_commenter.py  photo_server.py  photo_watcher.py  power-test.py  pyproject.toml  random-eyes.py  readme.md  requirements.txt  synced-eyes.py
models/: Eye Box.3mf  EyeBall-15mm.3mf  EyeBall-15mm.stl  EyeBar.stl  EyeInner.stl  EyePivot.stl
servo_calibrate/: servo_calibrate.ino
v2/: Eye Box.3mf  EyeInner.stl  EyePivot.stl  EyeShell.stl
