[project]
name = "eye-wall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adafruit-blinka>=8.67.0",
    "adafruit-circuitpython-pca9685>=3.4.20",
    "adafruit-circuitpython-servokit>=1.3.22",
    "freenect",
    "lgpio",
    "numpy>=2.3.4",
    "ruff>=0.14.3",
    "watchdog",
    "ollama",
    "flask",
]
